--- a/styleFapor.css
+++ b/styleFapor.css
@@ -245,7 +245,7 @@
             
             .section-blue p {
                 color: white;
-                font-weight: 500px;
+                font-weight: 500;
                 font-size: 24px;
                 margin-bottom: 35px;
             }
