--- a/styleFapor.css
+++ b/styleFapor.css
@@ -1,263 +1,402 @@
-            * {
-                margin: 0;
-                padding: 0;
-                font-family: 'Montserrat', sans-serif;
-            }
-            
-            body {
-                background-color: #e9e9e9;
-            }
-            
-            header {
-                padding-top: 39px;
-                margin-bottom: 169px;
-            }
-            
-            .container {
-                max-width: 1170px;
-                margin: auto;
-            }
-            
-            .container:after {
-                clear: both;
-                content: "";
-                display: block;
-            }
-            
-            header .logo {
-                float: left;
-            }
-            
-            header nav {
-                float: right;
-            }
-            
-            header nav ul {
-                list-style: none;
-            }
-            
-            header nav ul li {
-                display: inline-block;
-                margin-left: 30px;
-                padding-top: 7px;
-            }
-            
-            header nav ul li a {
-                text-decoration: none;
-                color: #191919;
-                text-transform: uppercase;
-                font-size: 12px;
-                font-weight: 500px;
-            }
-            
-            header nav ul li:hover a,
-            header nav ul li.active a {
-                color: #10c9c3;
-            }
-            
-            .fl_right {
-                float: right;
-            }
-            
-            .banner-inform .fl_right {
-                width: 41%;
-            }
-            
-            h1 {
-                font-weight: 500;
-                color: #442a2a;
-                font-size: 35px;
-                padding-bottom: 38px;
-            }
-            
-            p {
-                font-size: 18px;
-                color: #8d7373;
-                font-family: 'Nunito Sans', sans-serif;
-                font-weight: 500;
-            }
-            
-            .container-blue {
-                background-color: #10c9c3;
-                padding: 95px 0 95px;
-            }
-            
-            .achievement {
-                display: inline-block;
-                width: 24%;
-            }
-            
-            .achievement-text {
-                display: inline-block;
-                padding-left: 25px;
-                color: #fff;
-                font-size: 12px;
-                font-weight: 500;
-                text-transform: uppercase;
-            }
-            
-            .value {
-                font-size: 18px;
-                font-weight: 500;
-                padding-bottom: 6px;
-            }
-            
-            .button {
-                background-color: #10c9c3;
-                padding: 21px;
-                min-width: 180px;
-                text-align: center;
-                color: #fff;
-                font-size: 12px;
-                display: inline-block;
-                text-transform: uppercase;
-                text-decoration: none;
-                margin-top: 40px;
-            }
-            
-            .container-main {
-                margin-bottom: 200px;
-            }
-            
-            .white-section {
-                background-color: white;
-            }
-            
-            .white-section .container {
-                text-align: center;
-                padding: 95px 0 95px;
-            }
-            
-            .white-section .container p {
-                margin: 30px 0 10px;
-                font-size: 16px;
-            }
-            
-            .white-section .container h2 {
-                font-weight: 600;
-                font-size: 30px;
-            }
-            
-            .section-skills>div {
-                background-color: #f8f9f9;
-                padding: 150px 100px;
-            }
-            
-            .progress-bar {
-                width: 100%;
-                height: 3px;
-                background-color: #d8d8d8;
-            }
-            
-            .progress-bar:before {
-                content: "";
-                display: block;
-                background-color: #10c9c3;
-                height: 3px;
-            }
-            
-            .progress-bar-75:before {
-                width: 75%;
-            }
-            
-            .progress-bar-90:before {
-                width: 90%;
-            }
-            
-            .progress-bar-65:before {
-                width: 65%;
-            }
-            
-            .section-skills div span {
-                display: inline-block;
-                padding: 40px 0 20px;
-                font-size: 12px;
-                font-weight: 600;
-                text-transform: uppercase;
-            }
-            
-            .section-skills {
-                width: 50%;
-            }
-            
-            .video {
-                width: 100%;
-                background-color: #e9e9e9;
-                margin-top: 60px;
-                padding: 240px 0;
-            }
-            
-            .play-btn {
-                background-color: #10c9c3;
-                height: 85px;
-                width: 85px;
-                border-radius: 43px;
-                margin: 0 auto;
-            }
-            
-            .play-btn::before {
-                content: "";
-                display: inline-block;
-                width: 0px;
-                height: 0px;
-                border-top: 8px solid transparent;
-                border-left: 10px solid white;
-                border-bottom: 8px solid transparent;
-                margin: 36px auto;
-            }
-            
-            .container-grey .container {
-                padding: 100px 0 50px;
-            }
-            
-            .opportunity {
-                width: 24%;
-                display: inline-block;
-                text-align: center;
-                margin-bottom: 50px;
-            }
-            
-            .opportunity img {
-                margin-bottom: 25px;
-            }
-            
-            .opportunity span {
-                display: block;
-                font-weight: 600;
-                font-size: 12px;
-                text-transform: uppercase;
-                margin-bottom: 10px;
-            }
-            
-            .opportunity div {
-                font-family: 'Nunito Sans', sans-serif;
-                font-weight: 400;
-                font-size: 16px;
-                color: #787878;
-            }
-            
-            .section-blue {
-                background-color: #10c9c3;
-                text-align: center;
-                padding: 175px 0;
-            }
-            
-            .section-blue p {
-                color: white;
-                font-weight: 500;
-                font-size: 24px;
-                margin-bottom: 35px;
-            }
-            
-            .section-blue span {
-                color: white;
-                font-weight: 500;
-                font-size: 12px;
-                text-transform: uppercase;
-            }
-            
-            .white-section .container.container-img img {
-                text-align: center;
-                margin-left: 60px;
-                margin-right: 60px;
-            }
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #e9e9e9;
+}
+
+header {
+    padding-top: 39px;
+    margin-bottom: 169px;
+}
+
+.container {
+    max-width: 1170px;
+    margin: auto;
+}
+
+.container:after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
+header .logo {
+    float: left;
+}
+
+header nav {
+    float: right;
+}
+
+header nav ul {
+    list-style: none;
+}
+
+header nav ul li {
+    display: inline-block;
+    margin-left: 30px;
+    padding-top: 7px;
+}
+
+header nav ul li a {
+    text-decoration: none;
+    color: #191919;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 500px;
+}
+
+header nav ul li:hover a,
+header nav ul li.active a {
+    color: #10c9c3;
+}
+
+.fl_right {
+    float: right;
+}
+
+.banner-inform .fl_right {
+    width: 41%;
+}
+
+h1 {
+    font-weight: 500;
+    color: #442a2a;
+    font-size: 35px;
+    padding-bottom: 38px;
+}
+
+p {
+    font-size: 18px;
+    color: #8d7373;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 500;
+}
+
+.container-blue {
+    background-color: #10c9c3;
+    padding: 95px 0 95px;
+}
+
+.achievement {
+    display: inline-block;
+    width: 24%;
+}
+
+.achievement-text {
+    display: inline-block;
+    padding-left: 25px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.value {
+    font-size: 18px;
+    font-weight: 500;
+    padding-bottom: 6px;
+}
+
+.button {
+    background-color: #10c9c3;
+    padding: 21px;
+    min-width: 180px;
+    text-align: center;
+    color: #fff;
+    font-size: 12px;
+    display: inline-block;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin-top: 40px;
+}
+
+.container-main {
+    margin-bottom: 200px;
+}
+
+.white-section {
+    background-color: white;
+}
+
+.white-section .container {
+    text-align: center;
+    padding: 95px 0 95px;
+}
+
+.white-section .container p {
+    margin: 30px 0 10px;
+    font-size: 16px;
+}
+
+.white-section .container h2 {
+    font-weight: 600;
+    font-size: 30px;
+}
+
+.section-skills>div {
+    background-color: #f8f9f9;
+    padding: 150px 100px;
+}
+
+.progress-bar {
+    width: 100%;
+    height: 3px;
+    background-color: #d8d8d8;
+}
+
+.progress-bar:before {
+    content: "";
+    display: block;
+    background-color: #10c9c3;
+    height: 3px;
+}
+
+.progress-bar-75:before {
+    width: 75%;
+}
+
+.progress-bar-90:before {
+    width: 90%;
+}
+
+.progress-bar-65:before {
+    width: 65%;
+}
+
+.section-skills div span {
+    display: inline-block;
+    padding: 40px 0 20px;
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.section-skills {
+    width: 50%;
+}
+
+.video {
+    width: 100%;
+    background-color: #e9e9e9;
+    margin-top: 60px;
+    padding: 240px 0;
+    position: relative;
+}
+
+.play-btn {
+    background-color: #10c9c3;
+    height: 85px;
+    width: 85px;
+    border-radius: 43px;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -42.5px;
+    margin-top: -42.5px;
+    cursor: pointer;
+}
+
+.play-btn::before {
+    content: "";
+    display: inline-block;
+    width: 0px;
+    height: 0px;
+    border-top: 8px solid transparent;
+    border-left: 10px solid white;
+    border-bottom: 8px solid transparent;
+    margin: 36px auto;
+}
+
+.container-grey .container {
+    padding: 100px 0 50px;
+}
+
+.opportunity {
+    width: 24%;
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.opportunity img {
+    margin-bottom: 25px;
+}
+
+.opportunity span {
+    display: block;
+    font-weight: 600;
+    font-size: 12px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.opportunity div {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #787878;
+}
+
+.section-blue {
+    background-color: #10c9c3;
+    text-align: center;
+    padding: 175px 0;
+}
+
+.section-blue p {
+    color: white;
+    font-weight: 500;
+    font-size: 24px;
+    margin-bottom: 35px;
+}
+
+.section-blue span {
+    color: white;
+    font-weight: 500;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.white-section .container.container-img img {
+    text-align: center;
+    margin-left: 60px;
+    margin-right: 60px;
+}
+
+.form .container.container-small {
+    max-width: 670px;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.form .container.container-small h1 {
+    font-size: 30px;
+    font-weight: 600;
+    color: #1d1d1d;
+}
+
+.form .container.container-small p {
+    font-size: 16px;
+    color: #787878;
+    padding-bottom: 35px;
+    font-family: 'Nunito Sans';
+}
+
+.form .container.container-small .YN {
+    display: inline-block;
+    margin-right: 25px;
+}
+
+.form .container.container-small .YN input {
+    width: 320px;
+    margin-bottom: 30px;
+}
+
+.form .container.container-small .YE {
+    display: inline-block;
+}
+
+.form .container.container-small .YE input {
+    width: 320px;
+    margin-bottom: 30px;
+}
+
+.form .container.container-small .YT input {
+    margin-bottom: 30px;
+    width: 100%;
+}
+
+.form .container.container-small .YC textarea {
+    width: 100%;
+    resize: none;
+    height: 170px;
+    font-size: 15px;
+    padding: 15px 20px;
+    font-family: 'Nunito Sans';
+    margin-bottom: 30px;
+}
+
+input {
+    font-size: 15px;
+    line-height: 45px;
+    padding-left: 20px;
+    font-family: 'Nunito Sans';
+}
+
+.form .container.container-small div button {
+    background-color: #10c9c3;
+    color: #fff;
+    font-size: 12px;
+    padding: 20px 35px;
+    text-transform: uppercase;
+    border: none;
+}
+
+footer {
+    background-color: #141414;
+}
+
+footer .container {
+    padding: 95px 0 30px;
+}
+
+footer .container h3 {
+    font-size: 18px;
+    font-weight: 500;
+    color: #fff;
+    margin-bottom: 30px;
+}
+
+footer .container p {
+    font-size: 15px;
+    font-family: 'Nunito Sans';
+    font-weight: 400;
+    color: #bcbcbc;
+    float: left;
+}
+
+.copyright {
+    margin-right: 240px;
+    display: inline-block;
+    float: left;
+}
+
+.contact {
+    display: inline-block;
+    padding-right: 140px;
+    float: left;
+}
+
+footer .container:after {
+    content: " ";
+    display: block;
+    clear: both;
+}
+
+footer .container .links {
+    display: inline-block;
+    padding-right: 60px;
+    color: #fff;
+    font-size: 15px;
+    font-family: 'Nunito Sans';
+    font-weight: 400;
+    float: left;
+}
+
+footer .container .links li {
+    padding-bottom: 10px;
+    list-style-type: none;
+}
+
+footer .container .links.links-social {
+    padding-left: 10px;
+    float: right;
+}
